Fix new section not showing when starting with no spaces

--- a/sass/oa_sitemap_app.scss
+++ b/sass/oa_sitemap_app.scss
@@ -1,5 +1,9 @@
 @import "compass";
 
+#modalContent {
+  position: fixed !important;
+}
+
 .oa-sitemap {
   $width: 110px;
   $margin: 20px;
